# PyWiCh

./: .gitignore  channel_sim.py  pyproject.toml
src/: __init__.py  antennas.py  fading.py
src/pywich/: __init__.py  channel_performance.py
src/pywich/graph/: graph_antennas.py  graph_scenarios.py
src/pywich/gui/: gui_App_graph.py  gui_antennas.py  gui_frequency_band.py  gui_name_input.py  gui_scenarios.py  gui_select_SSP.py  gui_select_point.py  gui_select_point_prb.py
