[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
path = "src/pywich/__init__.py"

[tool.hatch.build]
directory = "build"

[tool.hatch.build.targets.sdist]
ignore-vcs = true
include = [
    "src/*"
]
exclude = [
    "__pycache__"
]

[tool.hatch.build.targets.wheel]
packages = [
    "src/pywich"
]
sources = [ "src" ]

[project]
name = "PiWiCh"
requires-python = ">=3.8"
readme = {file="README.md", content-type = "text/markdown"}
dynamic = ["version"]
dependencies = []
authors = [
    {name = 'Pablo Belzarena'},
    {name = "Bill Clark"}
]
maintainers = [
    {name = "Bill Clark"}
]
[project.scripts]

[tool.hatch.envs.enhanced]
features = [ "rl_packages" ]